# MeowHub

./: .dockerignore  .env.example  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
backend/: Dockerfile  manage.py
backend/cats/: admin.py  apps.py  cache.py  models.py  serializers.py  signals.py  views.py
backend/cats/migrations/: 0002_auto_20241114.py  0003_alter_achievement_options_and_more.py
backend/meowhub_backend/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/nginx/: default.conf
frontend/public/: index.html
frontend/src/components/footer/: footer.jsx
frontend/src/components/sign-in/: sign-in.jsx
frontend/src/components/sign-up/: sign-up.jsx
frontend/src/utils/: api.js  constants.js
infra/: default  gunicorn_meowhub.service  meowhub_site.txt
